Modified - changed choice card specific answerers from json read to on demand created